--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
 						<div class="inner">
 							<header class="major">
 								<h2>Mejora tus procesos de construcción en menor tiempo.<br />
+									Tenemos a los mejores expertos para ayudarte
+
 								</h2>
 								<p>Tenemos a los mejores expertos para poder ayudarte a implementar tu proyecto en menor tiempo,  optimizando recursos, y mejorando los costos.</p>
 							</header>
@@ -118,7 +120,8 @@
 						<div class="inner">
 							<header>
 								<h2>El futuro de la construcción, es hoy</h2>
-								<p>Las tecnologías emergentes son tu mejor aliado.</p>
+								<p>La digitalización es tu mejor aliado.
+								</p>
 							</header>
 							<ul class="actions stacked">
 								<li><a href="#" class="button fit primary">Suscribirme</a></li>
